# LongDo

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  External.cmake  LICENSE  Makefile  qtest.supp
.github/actions/setup-environment/: action.yml
.github/workflows/: long-do.yml
make/: deps.mk  gha.mk
qml/: main.qml
scripts/: memcheck-split.awk  supp-clean.sh
src/: MainPageLoader.cpp  MainPageLoader.hpp  main.cpp
src/ioc/: Container.hpp  Ioc.hpp  ServiceUser.hpp
ut/: CMakeLists.txt
ut/ext_sanity/: CMakeLists.txt
ut/ext_sanity/boost-di/: CMakeLists.txt  FailCreateNotBinded.cpp
ut/ioc/: CMakeLists.txt  ut_container.cpp  ut_ioc.cpp
